Fix current lesson not showing in the display

--- a/assets/scss/frontend/lesson-view.scss
+++ b/assets/scss/frontend/lesson-view.scss
@@ -639,3 +639,5 @@
     }
   }
 }
+
+.bdlms-lesson-list li.active {background: #eaeaea;}
